# FBox

./: .gitignore  .pre-commit-config.yaml  README.md  install_ubuntu.sh  pyproject.toml  uninstall_ubuntu.sh
config/: fbox.example.toml
docs/: architecture.md  faq.md  usage.md
scripts/: backup_fbox_creds.sh  fbox_credential_paths.sh  install_ubuntu.sh  install_windows.ps1  restore_fbox_creds.sh  uninstall_ubuntu.sh  uninstall_windows.ps1
secrets/: fbox-creds.tar.gz.age
src/fbox/: __init__.py
src/fbox/cli/: __init__.py  commit_command.py  interactive_prompts.py  main.py  profile_commands.py  status_views.py
src/fbox/config/: __init__.py  config_bootstrap.py  config_editor.py  editing.py  files.py  profile_store.py  settings.py
src/fbox/containers/: __init__.py  container_record.py  docker_runtime.py  models.py  target_resolution.py
src/fbox/install/: __init__.py  cleanup.py  installer_main.py  interactive_configurator.py  uninstall_cleanup.py  uninstall_main.py  venv_setup.py
src/fbox/state/: __init__.py  container_state_store.py
src/fbox_cli/: __init__.py  config.py  docker_runtime.py  main.py  models.py  path_resolution.py  prompts.py  state_store.py
tests/: conftest.py  test_cli_main.py  test_cli_prompts_and_runtime.py  test_commit_command.py  test_config_and_state.py  test_docker_runtime.py  test_install_and_target_resolution.py  test_install_interactive_configurator.py  test_interactive_configurator_actions.py  test_profile_commands.py  test_profile_system.py  test_settings.py  test_status_views.py
