[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fbox"
version = "0.1.0"
description = "Persistent Docker workboxes with strict mount defaults."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
fbox = "fbox_cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
